[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt
name = sampleprojectop
version = 2.0.0
description = A sample Python project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
author = A. Random Developer
author_email = author@example.com
classifiers = 
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha

    # Indicate who your project is intended for
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools

    # Pick your license as you wish
    License :: OSI Approved :: MIT License

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate you support Python 3. These classifiers are *not*
    # checked by 'pip install'. See instead 'python_requires' below.
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
keywords = sample, setuptools, development
project_urls = 
    "Bug Reports" = https://github.com/pypa/sampleproject/issues
    "Funding" = https://donate.pypi.org
    "Say Thanks!" = http://saythanks.io/to/example
    "Source" = https://github.com/pypa/sampleproject/

[options]
packages = find:
install_requires = 
    peppercorn
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
package_dir =
    =src

[options.packages.find]
where = src

[options.package_data]
sample = package_data.dat

[options.extras_require]
dev = 
    check-manifes
test = 
    coverage

[options.entry_points]
console_scripts =
    sample = sample.simple:entrypoint

[options.data_files]
my_data = data/data_file

[bdist_wheel]
universal = 1